--- a/_config.yml
+++ b/_config.yml
@@ -9,9 +9,9 @@
 title: William M Volckmann II
 #email: admin@cloud-cooking.org
 description: > # this means to ignore newlines until "baseurl:"
-  William M Volckmann II Personal Website
+  William M Volckmann II
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://wmvolckmann.github.io/" # the base hostname & protocol for your site
+url: "http://www.wimivo.com/" # the base hostname & protocol for your site
 #twitter_username: jekyllrb
 #github_username:  jekyll
 permalink: /:categories/:title/
