--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site settings
 title: William M Volckmann II
-#email: admin@cloud-cooking.org
+#email: wmvolckmann at gmail dot com
 description: > # this means to ignore newlines until "baseurl:"
   William M Volckmann II
 baseurl: "" # the subpath of your site, e.g. /blog
