--- a/_config.yml
+++ b/_config.yml
@@ -19,3 +19,5 @@ permalink: /:categories/:title/
 markdown: kramdown
 port: 3000 # change server port to 3000
 timezone: America/Los_Angeles
+plugins:
+  - jekyll-sitemap
