--- a/_config.yml
+++ b/_config.yml
@@ -21,12 +21,12 @@ port: 3000 # change server port to 3000
 timezone: America/Los_Angeles
 plugins:
   - jekyll-sitemap
-#  - jekyll-toc
+  - jekyll-toc
 
-# TOC Settings
-#toc:
-# min_level: 1
-# max_level: 3
-# list_class: toc
-# list_class: toc__list
-# sublist_class: toc__sublist
+ TOC Settings
+toc:
+ min_level: 1
+ max_level: 3
+ list_class: toc
+ list_class: toc__list
+ sublist_class: toc__sublist
