--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ port: 3000 # change server port to 3000
 timezone: America/Los_Angeles
 plugins:
   - jekyll-sitemap
-#  - jekyll-toc
+  - jekyll-toc
 
 #TOC Settings
 #toc:
